# portfolio-tui

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/config/: args.rs  mod.rs  settings.rs
src/data/: fetcher.rs  mod.rs  models.rs  parser.rs
src/processor/: formatter.rs  mod.rs
src/ui/: app.rs  ascii_art.rs  events.rs  mod.rs
src/ui/views/: about.rs  content.rs  home.rs  mod.rs  projects.rs  skills.rs
