[package]
name = "portfolio-tui"
version = "0.1.0"
edition = "2024"
description = "A terminal-based portfolio viewer that fetches data from GitHub"
authors = ["Pokeylooted"]

[dependencies]
ratatui = "0.26.0"
crossterm = "0.27.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
term_size = "0.3"
